add J-Measure on clusters

--- a/Drawing JD Tree/components/tree.css
+++ b/Drawing JD Tree/components/tree.css
@@ -46,3 +46,12 @@ body {
 .activeCluster {
     font-style: italic;
 }
+
+.JMeasure {
+    color: darkgreen;
+    visibility: hidden;
+}
+
+.cluster .JMeasure {
+    visibility: visible;
+}
