with attribute names

--- a/Drawing JD Tree/components/drawing1.css
+++ b/Drawing JD Tree/components/drawing1.css
@@ -24,6 +24,7 @@ div#info {
     right: 5px;
     display: flex;
     flex-direction: column;
+    font-size: 1.5vw;
 }
 
 div#right {
@@ -36,6 +37,7 @@ div#tree {
 
 div.list {
     text-align: center;
+    font-size: 1.5vw;
 }
 
 .list ul {
